--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -1,13 +1,14 @@
 FROM python:3.10-slim-buster
 
-WORKDIR /workspace
+COPY . /app
 
-COPY ./requirements.txt  requirements.txt
-RUN apt update -y && apt install -y build-essential libpq-dev 
-RUN pip install --upgrade pip setuptools wheel &&  pip install -r requirements.txt
+WORKDIR /app
 
-COPY ./app.py app.py
-COPY ./config.py config.py
+RUN apt update && apt-get install -y build-essential libpq-dev
 
-CMD python app.py
+RUN pip install --upgrade pip setuptools wheel
+RUN pip install -r requirements.txt
+
 EXPOSE 5153
+
+CMD ["python", "app.py"] 
