--- a/deployment/configmap.yaml
+++ b/deployment/configmap.yaml
@@ -1,17 +1,18 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: <NAME OF THE ConfigMap>
+  name: configmap-postgresql
 data:
-  DB_NAME: <ENTER YOUR DB NAME HERE>
-  DB_USER: <ENTER YOUR USER NAME HERE>
-  DB_HOST: <ENTER YOUR DB HOST HERE>
-  DB_PORT: <ENTER YOUR DB PORT HERE>
+  DB_NAME: "sale_db"
+  DB_USERNAME: "sale"
+  DB_PASSWORD: "sale_pa"
+  DB_HOST: "postgresql-service"
+  DB_PORT: "5432"
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: <NAME OF THE Secret>
+  name: secret-postgresql
 type: Opaque
 data:
-  <THE KEY FROM Secret WHICH has THE ENCODED PASSWORD>: <OUTPUT OF `echo -n 'the password' | base64`>
+  DB_PASSWORD: "c2FsZV9wYQo="
